<resources>
    <string name="app_name">Calendário Autoescola</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="concluidas">Concluídas: %1$s</string>
    <string name="restantes">Restantes: %1$s</string>

    <string name="action_edit">Editar</string>
    <string name="action_delete">Remover</string>
    <string name="action_save">Salvar</string>
    <string name="action_cancel">Cancelar</string>

    <string name="nova_disciplina">Nova Disciplina</string>
    <string name="editar_disciplina">Editar Disciplina</string>
    <string name="nome_da_disciplina_requerido">Nome da disciplina*</string>
    <string name="nome_da_disciplina">Nome da disciplina</string>
    <string name="simbolo">Símbolo</string>
    <string name="cor">Cor</string>
    <string name="selecione_uma_cor">Selecione uma cor</string>
    <string name="quantidade_de_aulas">Quantidade de aulas*</string>
    <string name="fechar_caps">FECHAR</string>
    <string name="cancelar_caps">CANCELAR</string>
    <string name="voltar_caps">VOLTAR</string>
    <string name="ok_caps">OK</string>

    <string name="excluir_aula_title">Excluir Aula?</string>
    <string name="excluir_aula_message">Esta aula já foi dada como concluída.\n\nDeseja continuar?</string>

    <string name="substituir_aula_title">Substituir aula?</string>
    <string name="substituir_aula_message"><![CDATA[Está alocando uma aula de <b>%1$s</b> em <b>%2$s</b> no lugar de <b>%3$s</b>.\n\nDeseja continuar?]]></string>

    <string name="excluir_disciplina_title">Excluir Disciplina?</string>
    <string name="excluir_disciplina_com_presenca_message">Esta disciplina já possui aulas concluídas.\n\nDeseja continuar?</string>
    <string name="excluir_disciplina_sem_presenca_message">Deseja excluir esta disciplina?</string>

    <string name="sim_caps">SIM</string>
    <string name="nao_caps">NÃO</string>

    <string name="lista_disciplinas_vazia_1">Nenhuma Disciplina foi cadastrada.</string>
    <string name="lista_disciplinas_vazia_2">Crie uma Disciplina para planejar suas aulas.</string>

    <string name="lista_aulas_vazia_1">Nenhuma Aula foi cadastrada.</string>
    <string name="lista_aulas_vazia_2">Inclua uma Aula para iniciar seu planejamento.</string>
    <string name="aula_removida">Aula removida</string>
    <string name="desfazer">Desfazer</string>
    <string name="remocao_desfeita">Remoção de aula desfeita</string>

    <string name="limite_vazio">Limite precisa ser válido.</string>
    <string name="nome_vazio">Nome precisa ser informado.</string>
    <string name="escolher_cor">Escolher Cor</string>

    <string name="dia">Dia</string>
    <string name="semana">Semana</string>

    <string name="ir_para_hoje">Ir para hoje</string>
    <string name="escolher_data">Escolher data</string>

    <string name="hoje">Hoje</string>
    <string name="amanha">Amanhã</string>
    <string name="ontem">Ontem</string>

    <string name="data">Data</string>

    <string name="aulas_concluidas">Aulas Concluídas</string>
    <string name="aulas_restantes">Aulas Restantes</string>

    <string name="detalhes_da_aula">Detalhes da Aula</string>

    <string name="proximas_aulas">Próximas aulas</string>
    <string name="proximas_aulas_hoje">Próximas aulas de hoje</string>

    <string-array name="periodo">
        <item>Ontem</item>
        <item>Hoje</item>
        <item>Amanhã</item>
    </string-array>

    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

    <string-array name="meses_abreviados">
        <item>Jan</item>
        <item>Fev</item>
        <item>Mar</item>
        <item>Abr</item>
        <item>Mai</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Ago</item>
        <item>Set</item>
        <item>Out</item>
        <item>Nov</item>
        <item>Dez</item>
    </string-array>

    <string-array name="dias">
        <item>Domingo</item>
        <item>Segunda</item>
        <item>Terça</item>
        <item>Quarta</item>
        <item>Quinta</item>
        <item>Sexta</item>
        <item>Sábado</item>
    </string-array>

    <string-array name="dias_abreviados">
        <item>Dom</item>
        <item>Seg</item>
        <item>Ter</item>
        <item>Qua</item>
        <item>Qui</item>
        <item>Sex</item>
        <item>Sáb</item>
    </string-array>
</resources>
